--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,11 @@
-<div class="row">
-  <div class="col-lg-12">
-    <div class="card-columns">
-      <div class="card" *ngFor="let cancion of nuevasCanciones">
-        <img [src]="cancion.images[0].url" class="card-img-top" >
-        <div class="card-body">
-          <h5 class="card-title">{{cancion.name}}</h5>
-          <p class="card-text">
-            <span *ngFor="let artist of cancion.artists" class="badge badge-pill badge-primary">{{artist.name}}</span>
-          </p>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-        </div>
-      </div>
-    </div>
-  </div>
+
+<app-loading *ngIf="loading"></app-loading>
+
+<div *ngIf="error" class="alert alert-danger">
+    <h3>Error</h3>
+    <p>{{mensajeError}}</p>
 </div>
 
 
+<app-tarjetas *ngIf="loading==false" [items]="nuevasCanciones"></app-tarjetas>
 
