--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,20 +3,5 @@
       <input type="text" #termino (keyup)="buscar(termino.value)" class="form-control" placeholder="buscar artistas">
    </div>
 </div>
-
-<div class="row">
-   <div class="col-lg-12">
-     <div class="card-columns">
-       <div class="card" *ngFor="let cancion of artistas">
-         <img [src]="cancion.images[0].url" class="card-img-top" >
-         <div class="card-body">
-           <h5 class="card-title">{{cancion.name}}</h5>
-           <p class="card-text">
-             <span *ngFor="let artist of cancion.artists" class="badge badge-pill badge-primary">{{artist.name}}</span>
-           </p>
-           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+<app-loading class="m-5" *ngIf="loading"></app-loading>
+ <app-tarjetas *ngIf="loading==false" [items]="artistas"></app-tarjetas>
